--- a/css/webfm.css
+++ b/css/webfm.css
@@ -41,43 +41,13 @@ img { border: 0; }
 #dragCont ul { margin:0; padding:0; }
 #dragCont li { margin:0; padding-left:20px; list-style-type:none; }
 
-#cxtCont {
-  border:1px solid #202867;
-  background-color:#FFF;
-  margin:0px;
-  padding:0px;
-  width:175px;
-  font-family:arial;
-  font-size:12px;
-  display:none;
-  position:absolute;
-}
-#cxtCont a {
-  color: #000;
-  text-decoration:none;
-  line-height:25px;
-  vertical-align:middle;
-  height:28px;
-
-  display:block;
-  width:100%;
-  clear:both;
-}
-#cxtCont li {
-  list-style-type:none;
-  padding:1px;
-  margin:1px;
-  cursor:pointer;
-  clear:both;
-}
-#cxtCont .cxtContHighlighted {
-  border:1px solid #000;
-  padding:0px;
-  background-color:#E2EBED;
-}
+#cxtCont { border:1px solid #202867; background-color:#FFF; padding-right:10px; }
+#cxtCont li { list-style-type:none; }
+#cxtCont li.cxtContHover { background-color:#E2EBED; color:red; cursor:pointer; }
 
 #filesearch { clear: left; }
-#metadata { clear: left; padding-top: 10px; }
+#metadata { clear: left; }
+#debug { clear: left; }
 #alertbox { margin: 10px; }
 
 .alertspan { background-color: #ffff00; color: #a00000; font: bold 12px/normal Arial; }
